simple UART_Init() works

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>acc_start_v1</name>
+	<name>Chisel</name>
 	<comment></comment>
 	<projects>
 	</projects>
